--- a/package.json
+++ b/package.json
@@ -6,15 +6,17 @@
     "@types/bun": "latest",
     "autoprefixer": "^10.4.21",
     "postcss": "^8.5.3",
-    "tailwindcss": "^3.4.17",
-    "vite": "^5.4.19"
+    "tailwindcss": "^4.1.8"
+  },
+  "scripts": {
+    "dev": "bun --hot src/index.tsx"
   },
   "peerDependencies": {
     "typescript": "^5.5.4"
   },
   "dependencies": {
-    "hono": "^4.7.9",
+    "hono": "^4.7.10",
     "puppeteer": "^23.11.1",
-    "zod": "^3.24.4"
+    "zod": "^3.25.32"
   }
 }
